2007-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Remove
	international.america, kansai.kataritsugu, nankyoku,
	nankyoku.borderless, nankyoku.people and nankyoku.whitemail groups;
	add international.africa, international.briefing,
	international.kawakami, international.korea,
	international.namerica, international.oceania,
	international.samerica, international.shizuki and
	international.weekly-asia groups; update index urls and regexps
	for igo, international.shien and kansai.* groups.
	(shimbun-asahi-get-headers): Fix url for international.briefing
	group.
	(shimbun-asahi-prepare-article): Fix start and end boundaries for
	international.briefing group.

	* w3m.el (w3m-menu-on-forefront): New variable.
	(w3m-setup-menu): Use it.

	* w3m-e21.el (w3m-menu-on-forefront): New function.

	* w3m-xmas.el (w3m-menu-on-forefront): New function.
	(w3m-setup-menu): Use it.

	* w3m-bookmark.el (w3m-setup-bookmark-menu): Don't arrange the
	order of the menu items here.
	* w3m-tabmenu.el (w3m-setup-tab-menu): Ditto.

2007-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in, doc/Makefile.in: Add datarootdir setting that is
	required for newer autoconfs.

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Remove edu,
	edu.column, edu.it, edu.news and edu.nyushi groups; add
	edu.examination, edu.ikuji, edu.issue, edu.kiji, edu.system,
	edu.university, housing.jutaku-s, housing.kansai and housing.machi
	groups.
	(shimbun-asahi-prepare-article): Remove adv for housing.* groups.

	* w3m.el (w3m-lynx-like-map, w3m-info-like-map): Use (featurep 'gtk)
	instead of (boundp 'gtk-version-string); use down-mouse-3 instead
	of mouse-3, and bind drag-mouse-3 and mouse-3 to undefined for GTK
	Emacs.

	* w3m-e21.el (w3m-use-toolbar)
	(w3m-toolbar-icon-preferred-image-types): Use (featurep 'gtk)
	instead of (boundp 'gtk-version-string).
	(w3m-toolbar-configurations): Select frame visiting buffer which